tdf#98421: properly import vertical mirroring of images from PDF

Since commit ae0e830f9ace78b889713e7e74ce46f88fa21470, mirroring
is handled correctly in LO, so no need to handle it specially in
PDF import code. Commit 11c865031cffc170d3db6b00fb48c683fb4ff070
fixed import to Draw, this one fixes import to Writer.
Also, unit tests for both cases are provided.

Change-Id: I9ef9753a364af34f9e158052855c5dba1300c934